--- a/src/component/LoginAdmin/login.css
+++ b/src/component/LoginAdmin/login.css
@@ -1,23 +1,28 @@
 *{
     box-sizing: border-box;
 }
+body{
+  background-color: #fff;
+}
+
 .container-login {
   display: inline-flex;
   width: 100%;
+  max-height: 1024px;
 }
 
 .img-login {
-  width: 600px;
-  height: 100%;
+  width: 720px;
+  /* height: 100%; */
   min-height: 100vh;
+  max-height: 1024px;
   /* height: 100%; */
 }
 .img-login img {
-  width: 600px;
-  height: 100%;
-
+  width: 720px;
   min-height: 100vh;
   height: 100%;
+  max-height: 1024px;
   object-fit: cover;
   display: block;
   background-repeat: no-repeat;
@@ -27,49 +32,63 @@
   position: absolute;
   /* top: 0;
   left: 0; */
-  width: 600px;
-  height: 100%;
+  width: 720px;
+  /* height: 100%; */
+  max-height: 1024px;
   background-color: rgba(30, 30, 30, 0.24); /* Color with opacity */
   pointer-events: none; /* Ensure the overlay does not interfere with any interactions */
 }
 
+
 .add-login {
-  width: 100%;
+  background-color: #fff;
+  /* width: 100%; */
+  width: 720px;
   min-height: 100vh;
   padding-right: 20px;
   padding-left: 20px;
 }
 
+
 .add-login h1 {
   margin: 20px;
-  /* margin-top: 20px; */
+  margin-top: 80px;
   display: flex;
   justify-content: center;
   font-weight: 400;
   font-size: 64px;
-  line-height: 71px;
+  line-height: 71.42px;
   text-align: right;
   color: #d01025;
 }
 
 
+.btn-login {
+  margin: 20px;
+  margin-top: 40px;
+  display: flex;
+  justify-content: center;
+  gap: 40px;
+}
+
+
 .btn {
-    width: 200px;
-    height: 60px;
+    width: 250px;
+    height: 72px;
     border: none;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    padding: 16px 24px;
+    padding: 16px 24px 16px 24px;
     /* background: #D01025; */
     border-radius: 16px;
     cursor: pointer;
     font-weight: 400;
-    font-size: 20px;
+    font-size: 36px;
     line-height: 40px;
     text-align: right;
-    color:#d01025;
+    color:#D01025;
     background: #ffffff;
   }
 
@@ -79,38 +98,32 @@
   }
   
 
-.btn-login {
-  margin: 20px;
-  display: flex;
-  justify-content: center;
-  gap: 20px;
-}
 
 .input-login {
   text-align: right;
   margin: 20px;
-  margin-top: 30px;
+  margin-top: 50px;
 }
 
 .input-login h2 {
   font-weight: 400;
   font-size: 36px;
-  line-height: 40px;
   text-align: right;
   color: #6b6b6b;
+  line-height: 40.18px;
 }
 
 .input-name {
-  margin-top: 20px;
+  margin-top: 30px;
   display: flex;
   align-items: flex-end;
   flex-direction: column;
-  gap: 10px;
+  gap: 20px;
 }
 
 .input-name > input {
   box-sizing: border-box;
-  width: 300px;
+  width: 395px;
   height: 56px;
   border: 1px solid #d01025;
   border-radius: 16px;
@@ -123,39 +136,38 @@
   text-decoration: underline;
 }
 
-.submit-btn{
-    font-weight: 700;
-    font-size: 20px;
-    box-sizing: border-box;
-    width: 300px;
-    height: 56px;
-    border: 1px solid #d01025;
-    border-radius: 16px;
-    text-align: center;
-    padding: 15px;
-    background-color: #d01025;
-    color:#fff;
-    cursor: pointer;
-    margin-top: 20px;
-}
-
 .forgetpass-btn{
-  background: #f6f6f6;
+  background: #fff;
   border: none;
   text-decoration: underline;
   color: #d01025;
   cursor: pointer;
+  font-size: 20px;
+  line-height: 22.32px;
+  font-weight: 400;
 }
 
+.submit-btn{
+    box-sizing: border-box;
+    width: 395px;
+    height: 56px;
+    border: 1px solid #d01025;
+    border-radius: 16px;
+    text-align: center;
+    background-color: #d01025;
+    color:#fff;
+    cursor: pointer;
+    margin-top: 20px;
+    font-weight:700 ;
+    font-size: 24px;
+    line-height: 26.78px;
+}
 
-
-
-
-
-
+/* style for CheckOTP */
 
 /* General styling for OTP input fields */
 .otp{
+  margin: 40px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -210,8 +222,9 @@
 .contact-info {
   display: block;
   font-weight: normal;
-  color: #333; /* Adjust color as needed */
 }
+
+
 .verify-otp-button{
   width: 390px;
   height: 56px;
