--- a/src/component/Navbar/Navbar.css
+++ b/src/component/Navbar/Navbar.css
@@ -22,28 +22,35 @@ body {
   height: 56px;
   border-radius: 50%;
 }
+
 .nav-mneu {
-  height: 100%; /* Full-height: remove this if you want "auto" height */
-  width: 200px; /* Set the width of the sidebar */
-  position: fixed; /* Fixed Sidebar (stay in place on scroll) */
-  z-index: 1; /* Stay on top */
-  top: 0; /* Stay at the top */
-  left: 0;
-  background-color: #fff; /* Black */
-  overflow-x: hidden; /* Disable horizontal scroll */
-  padding: 40px;
-  padding-top: 25px;
-  padding-right: 0;
-  padding-bottom: 20px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  gap: 30px;
-  color: #ABABAB;
+  height: 100%;
+    width: 290px;
+    max-height: 1024px;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: #fff;
+    overflow-x: hidden;
+    /* padding: 32px; */
+    /* padding-top: 25px; */
+    padding-right: 0;
+    padding-bottom: 20px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    gap: 30px;
+    color: #ABABAB;
+    align-items: center;
 }
+
 .nav-mneu h1 {
   color: #d01025;
+  font-size: 40px;
+  font-weight: 700;
+  line-height: 44.64px;
 }
 .nav-mneu ul {
   display: flex;
