--- a/src/component/Navbar/Navbar.css
+++ b/src/component/Navbar/Navbar.css
@@ -4,8 +4,10 @@
   padding: 0;
   box-sizing: border-box;
   font-family: "Almarai", sans-serif;
-
 }
+/* .n{
+height:1024px;
+} */
 a{
   text-decoration: none;
 }
@@ -33,8 +35,6 @@ body {
     left: 0;
     background-color: #FFFFFF;
     overflow-x: hidden;
-    /* padding: 32px; */
-    /* padding-top: 25px; */
     padding-right: 0;
     padding-bottom: 20px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -62,37 +62,164 @@ body {
   line-height: 45px;
 }
 
-.nav-mneu ul {
+.nav-mneu .full-menu {
   display: flex;
-  gap: 20px;
+  gap: 2px;
   flex-direction: column;
   list-style: none;
 
+  width: 100%;
+  margin-left: 25px;
+  margin-right: 25px;
 }
 
-.nav-mneu ul li {
+.nav-mneu .full-menu > li {
   display: flex;
   gap: 20px;
   font-size: 20px;
+  align-items: center;
+  cursor: pointer;
+  height: 60px;
 }
 
+.full-menu li a {
+  color: #B5B5B5;
+}
+
+.nav-mneu ul li .redb{
+/* Rectangle 18 */
+width: 6px;
+height: 60px;
+left: 0px;
+top: 0px;
+
+/* background: #D01025; */
+border-radius: 0px 10px 10px 0px;
+
+}
+
+.redb{
+  width: 6px;
+  height: 60px;
+  left: 0px;
+  top: 0px;
+  /* background: #D01025; */
+  border-radius: 0px 10px 10px 0px;
+}
+/* 
+.user-menu {
+  margin: 20px;
+  display: flex;
+} */
+
+.user-list{
+  /* padding-left: 20px; */
+  margin: 0 !important;
+  display: flex;
+  flex-direction: column;
+  gap: 20px; 
+}
+
+.user-list > .sub-menu{
+  display: flex;
+    gap: 50px;
+    font-size: 20px;
+    align-items: center;
+}
+
+/* .user-list li:last-child {
+  border-bottom: none;
+} */
+
+
+/* 
 .nav-mneu ul li a {
   color: #000;
-}
+} */
 
 .container {
-  display: flex;
+  /* display: flex;
   align-items: center;
   justify-content: space-between;
   color: #d01025;
-  margin-left: 200px;
+  margin-left: 200px; */
+
+  /* Frame 1000004270 */
+
+/* Auto layout */
+display: flex;
+flex-direction: row;
+justify-content: space-between;
+align-items: center;
+padding: 16px 24px;
+gap: 670px;
+
+position: absolute;
+width: 1150px;
+height: 88px;
+left: 290px;
+top: 0px;
+
+background: #FFFFFF;
+border-radius: 0px 0px 40px 0px;
+
 }
+
+.container .welcome{
+/* Group 11 */
+
+margin: 0 auto;
+width: 207px;
+height: 56px;
+
+
+/* Inside auto layout */
+flex: none;
+order: 0;
+flex-grow: 0;
+
+}
+
+.welcome img{
+  /* Ellipse 12 */
+
+position: absolute;
+width: 56px;
+height: 56px;
+left: 24px;
+top: 16px;
+
+background: #D9D9D9;
+
+}
+.name-text{
+  /* Hello, Amal */
+
+position: absolute;
+width: 127px;
+height: 27px;
+left: 104px;
+top: 29px;
+
+font-family: 'Almarai';
+font-style: normal;
+font-weight: 700;
+font-size: 24px;
+line-height: 27px;
+/* identical to box height */
+font-feature-settings: 'ss01' on, 'cv01' on, 'cv11' on;
+
+color: #D01025;
+
+
+}
+/* 
 .container div {
   display: flex;
   align-items: center;
   gap: 15px;
   font-weight:700
-}
+} */
 
 /* .search-container{
     gap: 3px !important;
@@ -135,18 +262,54 @@ body {
 }
 
 
-.user-menu {
-  margin: 20px;
+
+
+/* Default styles for menu items */
+
+
+
+
+.full-menu li .redb {
+  background-color: initial;
 }
+
+/* Active styles for menu items */
+.full-menu li.active-tab svg path {
+  stroke: red;
+}
+
+.full-menu li.active-tab a {
+  color: red;
+}
+
+.full-menu li.active-tab .redb {
+  background-color: red;
+}
+
+/* Styles for the user dropdown */
 .user-list {
-  padding-left: 20px;
+  list-style: none;
+  padding: 0;
+  margin: 0;
 }
 
-.user-list li {
-  padding: 10px;
-  padding-top: 0;
+.user-list .sub-menu {
+  cursor: pointer;
 }
 
-.user-list li:last-child {
-  border-bottom: none;
+.user-list .sub-menu a {
+  color: initial;
+}
+
+.user-list .sub-menu .redb {
+  background-color: initial;
+}
+
+/* Active styles for dropdown items */
+.user-list .sub-menu.active-tab a {
+  color: red;
+}
+
+.user-list .sub-menu.active-tab .redb {
+  background-color: red;
 }
