--- a/src/component/Navbar/Navbar.css
+++ b/src/component/Navbar/Navbar.css
@@ -1,4 +1,3 @@
-
 * {
   margin: 0;
   padding: 0;
@@ -8,7 +7,7 @@
 /* .n{
 height:1024px;
 } */
-a{
+a {
   text-decoration: none;
 }
 body {
@@ -27,27 +26,27 @@ body {
 
 .nav-mneu {
   height: 100%;
-    width: 290px;
-    max-height: 1024px;
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    left: 0;
-    background-color: #FFFFFF;
-    overflow-x: hidden;
-    padding-right: 0;
-    padding-bottom: 20px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    gap: 10px;
-    color: #ABABAB;
-    align-items: center;
-    border-radius: 0px 0px 40px 0px;
+  width: 290px;
+  max-height: 1024px;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: #ffffff;
+  overflow-x: hidden;
+  padding-right: 0;
+  padding-bottom: 20px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  gap: 10px;
+  color: #ababab;
+  align-items: center;
+  border-radius: 0px 0px 40px 0px;
 }
 
-.nav-title-ul{
+.nav-title-ul {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -83,22 +82,21 @@ body {
 }
 
 .full-menu li a {
-  color: #B5B5B5;
+  color: #b5b5b5;
 }
 
-.nav-mneu ul li .redb{
-/* Rectangle 18 */
-width: 6px;
-height: 60px;
-left: 0px;
-top: 0px;
+.nav-mneu ul li .redb {
+  /* Rectangle 18 */
+  width: 6px;
+  height: 60px;
+  left: 0px;
+  top: 0px;
 
-/* background: #D01025; */
-border-radius: 0px 10px 10px 0px;
-
+  /* background: #D01025; */
+  border-radius: 0px 10px 10px 0px;
 }
 
-.redb{
+.redb {
   width: 6px;
   height: 60px;
   left: 0px;
@@ -112,162 +110,108 @@ border-radius: 0px 10px 10px 0px;
   display: flex;
 } */
 
-.user-list{
+.user-list {
   /* padding-left: 20px; */
   margin: 0 !important;
   display: flex;
   flex-direction: column;
-  gap: 20px; 
+  gap: 20px;
 }
 
-.user-list > .sub-menu{
+.user-list > .sub-menu {
   display: flex;
-    gap: 50px;
-    font-size: 20px;
-    align-items: center;
+  gap: 50px;
+  font-size: 20px;
+  align-items: center;
 }
-
-/* .user-list li:last-child {
-  border-bottom: none;
-} */
-
-
-/* 
-.nav-mneu ul li a {
-  color: #000;
-} */
 
 .container {
-  /* display: flex;
-  align-items: center;
+  display: flex;
+  /* flex-direction: row; */
   justify-content: space-between;
-  color: #d01025;
-  margin-left: 200px; */
-
-  /* Frame 1000004270 */
-
-/* Auto layout */
-display: flex;
-flex-direction: row;
-justify-content: space-between;
-align-items: center;
-padding: 16px 24px;
-gap: 670px;
-
-position: absolute;
-width: 1150px;
-height: 88px;
-left: 290px;
-top: 0px;
-
-background: #FFFFFF;
-border-radius: 0px 0px 40px 0px;
-
+  align-items: center;
+  padding: 16px 24px;
+  position: absolute;
+  width: 1150px;
+  height: 88px;
+  left: 290px;
+  top: 0px;
+  background: #ffffff;
+  border-radius: 0px 0px 40px 0px;
 }
 
-.container .welcome{
-/* Group 11 */
+.container .welcome {
+  width: 207px;
+  height: 56px;
+  /* Inside auto layout */
+  /* flex: none;
+order: 0;
+flex-grow: 0; */
+}
 
-margin: 0 auto;
-width: 207px;
-height: 56px;
+.welcome img {
+  position: absolute;
+  width: 56px;
+  height: 56px;
+  left: 24px;
+  top: 16px;
+}
+.name-text {
+  position: absolute;
+  height: 27px;
+  left: 104px;
+  top: 29px;
+  font-family: "Almarai";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 27px;
+  color: #d01025;
+}
+
+.search-container .search {
+  /* gap: 3px !important;
+  background-color: #f7f7f7; */
+  width: 400px;
+  height: 56px;
+  display: inline-block;
+  text-align: left;
+  font-style: normal;
+  font-size: 20px;
+  font-weight: 500;
+  padding: 0px 0px 0px 50px;
+  border-radius: 16px;
+  background: #f6f6f6 url("../imgs/search-regular-24.png") 18px 15px no-repeat;
+  background-size: 24px 24px;
+  border: none;
+}
+
+.search::placeholder { /* Most modern browsers support this now. */
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 24px;
+  text-transform: capitalize;
+  color: #CACACA;
+  }
+
+  .subscr-translate{
+    /* Group 1000004181 */
+
+width: 146px;
+height: 32px;
 
 
 /* Inside auto layout */
 flex: none;
-order: 0;
+order: 2;
 flex-grow: 0;
 
-}
-
-.welcome img{
-  /* Ellipse 12 */
-
-position: absolute;
-width: 56px;
-height: 56px;
-left: 24px;
-top: 16px;
-
-background: #D9D9D9;
-
-}
-.name-text{
-  /* Hello, Amal */
-
-position: absolute;
-width: 127px;
-height: 27px;
-left: 104px;
-top: 29px;
-
-font-family: 'Almarai';
-font-style: normal;
-font-weight: 700;
-font-size: 24px;
-line-height: 27px;
-/* identical to box height */
-font-feature-settings: 'ss01' on, 'cv01' on, 'cv11' on;
-
-color: #D01025;
-
-
-}
-/* 
-.container div {
-  display: flex;
-  align-items: center;
-  gap: 15px;
-  font-weight:700
-} */
-
-/* .search-container{
-    gap: 3px !important;
-    border-radius: 10px;
-    height: 30px;
-    background-color: #f7f7f7;
-
-}
-.search-container input{
-    border: none;
-    width: 20em;
-    height: 30px;
-    background-color: #f7f7f7;
-    padding: 10px;
-} */
+  }
 .translate {
   gap: 5px !important;
 }
-
-.search {
-  background: #fff;
-  height: 45px;
-  width: 350px;
-  color: #a7b1ab;
-  border:none;
-  margin-bottom: 0px;
-  /* -webkit-appearance: none;
-  border-radius: 4px 0px 0px 4px;
-  -moz-border-radius: 4px 0px 0px 4px;
-  -webkit-border-radius: 4px 0px 0px 4px; */
-  display: inline-block;
-  text-align: left;
-  font-size: 16px;
-  font-weight: 400;
-  padding: 0px 0px 0px 50px;
-  font-size: 12px;
-  border-radius: 16px;
-  background: #F6F6F6 url("../imgs/search-regular-24.png") 18px 15px no-repeat;
-  background-size: 20px 20px;
-}
-
-
-
-
-/* Default styles for menu items */
-
-
-
 
 .full-menu li .redb {
   background-color: initial;
